(lang dune 3.1)

(name motivateme)

(generate_opam_files true)

(source
 (github mewfree/motivateme))

(authors "Damien Gonot")

(maintainers "Damien Gonot")

(license MIT)

(package
 (name motivateme)
 (synopsis "Display a random motivational quote")
 (depends ocaml dune))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
